# proof-engine

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  customSpec.json  customSpecRaw.json  docker-compose.yaml  swarm.key
.github/workflows/: main.yml
assets/models/logos/: Logo_FULA.gltf  Logo_IPFS.gltf  Logo_SugarFunge.gltf
assets/shaders/: pointcloud.wgsl
docker/: Dockerfile
docker/nvidia/: Dockerfile  docker-build.sh  docker-compose.yaml
src/: common.rs  config.rs  ipfs.rs  main.rs  manifest.rs  opts.rs  render.rs  sugarfunge.rs
