[package]
name = "proof-engine"
version = "0.1.0"
edition = "2021"

[features]
headless = []

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
anyhow = "1.0"

bevy = { version = "0.7", default-features = false }
bevy-inspector-egui = "0.10"
simula_core = { git = "https://github.com/Simbotic/simula.git", rev = "c907cd248b89e75a57cbfe880a976ccee45efe45" }
simula_camera = { git = "https://github.com/Simbotic/simula.git", rev = "c907cd248b89e75a57cbfe880a976ccee45efe45" }
simula_viz = { git = "https://github.com/Simbotic/simula.git", rev = "c907cd248b89e75a57cbfe880a976ccee45efe45" }

tokio = { default-features = false, features = [
    "io-std",
    "io-util",
    "time",
    "rt-multi-thread",
], version = "1" }
futures = { version = "0.3" }
crossbeam = "0.8"
ipfs-api-backend-hyper = { version = "0.5.0" }

reqwest = { version = "0.11", features = ["json"] }
sugarfunge-api-types = { git = "https://github.com/functionland/sugarfunge-api.git", rev = "cabffbdd784b94b99cef68fe551b7f1f4d2853cc" }

pcd-rs = "0.8.0"
bytes = "1.1"
