[package]
name = "proof-engine"
version = "0.1.0"
edition = "2021"

[features]
headless = []

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
anyhow = "1.0"
dotenv = "0.15.0"

bevy = { version = "0.7.0", default-features = false }
bevy-inspector-egui = "0.10"
simula_core = { git = "https://github.com/Simbotic/simula.git", rev = "c907cd248b89e75a57cbfe880a976ccee45efe45" }
simula_camera = { git = "https://github.com/Simbotic/simula.git", rev = "c907cd248b89e75a57cbfe880a976ccee45efe45" }
simula_viz = { git = "https://github.com/Simbotic/simula.git", rev = "c907cd248b89e75a57cbfe880a976ccee45efe45" }

tokio = { default-features = false, features = [
    "io-std",
    "io-util",
    "time",
    "rt-multi-thread",
], version = "1" }
futures = { version = "0.3" }
crossbeam = "0.8"
ipfs-api-backend-hyper = { version = "0.5.0" }

reqwest = { version = "0.11", features = ["json"] }
sugarfunge-api-types = { git = "https://github.com/functionland/sugarfunge-api.git", rev = "1bbc8b26656d5297a6fc799e473f502e7bb6c99e" }
contract-api-types = {git = "https://github.com/functionland/fula-contract-api.git", rev = "00c23786bdaf0c60ec601d8b1207c52fa49d7947"}
pcd-rs = "0.8.0"
bytes = "1.1"
