[package]
name = "proof-engine"
version = "0.1.1"
edition = "2021"

[features]
headless = []

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
anyhow = "1.0"
dotenv = "0.15.0"

bevy = { version = "0.7.0", default-features = false }
bevy-inspector-egui = "0.10"
simula_core = { git = "https://github.com/Simbotic/simula.git", rev = "c907cd248b89e75a57cbfe880a976ccee45efe45" }
simula_camera = { git = "https://github.com/Simbotic/simula.git", rev = "c907cd248b89e75a57cbfe880a976ccee45efe45" }
simula_viz = { git = "https://github.com/Simbotic/simula.git", rev = "c907cd248b89e75a57cbfe880a976ccee45efe45" }

tokio = { default-features = false, features = [
    "io-std",
    "io-util",
    "time",
    "rt-multi-thread",
], version = "1" }
futures = { version = "0.3" }
crossbeam = "0.8"
ipfs-api-backend-hyper = { git = "https://github.com/ferristseng/rust-ipfs-api", rev = "6e6e97c5530103eed8ccdf7d77042dbee7db9129" }

reqwest = { version = "0.11", features = ["json"] }
sugarfunge-api-types = { git = "https://github.com/functionland/sugarfunge-api.git", rev = "a79ed2f6e896d94ab99618e1e61e30c457cd8438" }
contract-api-types = {git = "https://github.com/functionland/fula-contract-api.git", rev = "265a66c0940351bb53bb776dd2e8a61fbf97cb91"}
pcd-rs = "0.8.0"
bytes = "1.1"
